--- a/newApplication/package.json
+++ b/newApplication/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "start-server": "npx json-server --watch books.json",
     "test": "ng test"
   },
   "private": true,
@@ -20,6 +21,8 @@
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "json-server": "^0.17.3",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
